--- a/go_brasil_ranking/public/index.css
+++ b/go_brasil_ranking/public/index.css
@@ -1,3 +1,46 @@
+*,
+::after,
+::before {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
+html {
+  font-family: sans-serif;
+  height: 100%;
+}
+
+body {
+  background-color: #d7d7d7;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 42px 1fr;
+}
+
+a {
+  text-decoration: none;
+}
+
+route-link:hover {
+  cursor: pointer;
+}
+
+nav-bar {
+  background-color: green;
+  color: #f9f9f9;
+  font-size: 1.1rem;
+  padding-left: 15px;
+  padding-top: 10px;
+}
+nav-bar nav {
+  display: flex;
+  gap: 20px;
+}
+
+main {
+  padding-top: 10px;
+  padding-left: 15px;
+}
 
 /*# sourceMappingURL=index.css.map */
