borders for the tables

--- a/go_brasil_ranking/public/index.css
+++ b/go_brasil_ranking/public/index.css
@@ -45,9 +45,15 @@ main {
 
 home-view table {
   margin-bottom: 20px;
+  border-collapse: separate;
+  border-spacing: 10px;
 }
 home-view table caption {
   margin-bottom: 15px;
+}
+home-view table caption h3 {
+  font-size: 1.2rem;
+  padding-left: 22px;
 }
 home-view table th,
 home-view table caption {
@@ -58,10 +64,25 @@ home-view table th {
 }
 home-view table td,
 home-view table th {
-  padding-right: 15px;
+  padding-right: 20px;
 }
 home-view table td {
-  padding-bottom: 7.5px;
+  padding-bottom: 15px;
+  padding-top: 15px;
+}
+home-view table tbody tr {
+  outline: thin solid;
+  border-width: 5px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px;
+  transition: all 0.15s ease-in-out;
+}
+home-view table tbody tr td:first-child {
+  padding-left: 15px;
+}
+home-view table tbody tr:hover {
+  box-shadow: rgba(0, 0, 0, 0.22) 0px 19px 43px;
+  transform: translate3d(0px, -0.5px, 0px);
 }
 
 /*# sourceMappingURL=index.css.map */
