--- a/go_brasil_ranking/src/ui/styles/index.scss
+++ b/go_brasil_ranking/src/ui/styles/index.scss
@@ -1,129 +1,5 @@
-$bgColor: #d7d7d7;
-$lightFontColor: #f9f9f9;
-$mainPaddingLeft: 15px;
+@use "globals";
 
-*,
-::after,
-::before {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+@use "components/navbar";
 
-html {
-  font-family: sans-serif;
-
-  height: 100%;
-}
-
-body {
-  background-color: $bgColor;
-
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 42px 1fr;
-}
-
-a {
-  text-decoration: none;
-}
-
-route-link {
-  &:hover {
-    cursor: pointer;
-  }
-}
-
-nav-bar {
-  background-color: green;
-  font-size: 1.1rem;
-
-  padding-left: $mainPaddingLeft;
-  padding-top: 10px;
-
-  nav {
-    display: flex;
-    gap: 20px;
-
-    route-link {
-      color: $lightFontColor;
-    }
-  }
-}
-
-main {
-  padding-top: 10px;
-  padding-left: $mainPaddingLeft;
-}
-
-home-view {
-  .ranking-table {
-    margin-bottom: 35px;
-
-    width: max-content;
-  }
-
-  @mixin cardDecoration {
-    background: whitesmoke;
-
-    border: 3px solid #eee;
-    border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px;
-    transition: all 0.15s ease-in-out;
-
-    &:hover {
-      box-shadow: rgba(0, 0, 0, 0.22) 0px 19px 43px;
-      transform: translate3d(0px, -0.5px, 0px);
-    }
-  }
-
-  @mixin cardMarginPadding {
-    margin-bottom: 10px;
-
-    padding: 12px 0px;
-    padding-left: 10px;
-  }
-
-  @mixin playerLink {
-    route-link {
-      color: darken(green, 10%);
-    }
-  }
-
-  .player-card {
-    > route-link {
-      display: grid;
-      grid-template-columns:
-        minmax(20px, max-content) minmax(200px, max-content) minmax(
-          60px,
-          max-content
-        )
-        minmax(30px, max-content);
-
-      @include cardDecoration;
-      @include cardMarginPadding;
-      @include playerLink;
-    }
-  }
-
-  .game-record-card {
-    > route-link {
-      display: grid;
-      grid-template-columns:
-        minmax(20px, max-content) minmax(200px, max-content) minmax(
-          200px,
-          max-content
-        )
-        minmax(50px, max-content);
-
-      @include cardDecoration;
-      @include cardMarginPadding;
-      @include playerLink;
-    }
-  }
-
-  h3 {
-    margin-bottom: 10px;
-    padding-left: 5px;
-  }
-}
+@use "views/home_view";
