abstracting away the game records table

--- a/go_brasil_ranking/public/index.css
+++ b/go_brasil_ranking/public/index.css
@@ -45,10 +45,35 @@ nav-bar nav route-link {
   color: #f9f9f9;
 }
 
-home-view .ranking-table {
+h3 {
+  margin-bottom: 10px;
+  padding-left: 5px;
+}
+
+game-records-table {
   margin-bottom: 35px;
   width: max-content;
 }
+game-records-table .game-record-card > route-link {
+  display: grid;
+  grid-template-columns: minmax(20px, max-content) minmax(200px, max-content) minmax(200px, max-content) minmax(50px, max-content);
+  background: whitesmoke;
+  border: 3px solid #eee;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px;
+  transition: all 0.15s ease-in-out;
+  margin-bottom: 10px;
+  padding: 12px 0px;
+  padding-left: 10px;
+}
+game-records-table .game-record-card > route-link:hover {
+  box-shadow: rgba(0, 0, 0, 0.22) 0px 19px 43px;
+  transform: translate3d(0px, -0.5px, 0px);
+}
+game-records-table .game-record-card > route-link route-link {
+  color: #004d00;
+}
+
 home-view .player-card > route-link {
   display: grid;
   grid-template-columns: minmax(20px, max-content) minmax(200px, max-content) minmax(60px, max-content) minmax(30px, max-content);
@@ -67,29 +92,6 @@ home-view .player-card > route-link:hover {
 }
 home-view .player-card > route-link route-link {
   color: #004d00;
-}
-home-view .game-record-card > route-link {
-  display: grid;
-  grid-template-columns: minmax(20px, max-content) minmax(200px, max-content) minmax(200px, max-content) minmax(50px, max-content);
-  background: whitesmoke;
-  border: 3px solid #eee;
-  border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px;
-  transition: all 0.15s ease-in-out;
-  margin-bottom: 10px;
-  padding: 12px 0px;
-  padding-left: 10px;
-}
-home-view .game-record-card > route-link:hover {
-  box-shadow: rgba(0, 0, 0, 0.22) 0px 19px 43px;
-  transform: translate3d(0px, -0.5px, 0px);
-}
-home-view .game-record-card > route-link route-link {
-  color: #004d00;
-}
-home-view h3 {
-  margin-bottom: 10px;
-  padding-left: 5px;
 }
 
 player-view {
