--- a/go_brasil_ranking/src/ui/styles/globals.scss
+++ b/go_brasil_ranking/src/ui/styles/globals.scss
@@ -28,10 +28,8 @@ a {
   text-decoration: none;
 }
 
-route-link {
-  &:hover {
-    cursor: pointer;
-  }
+route-link:hover {
+  cursor: pointer;
 }
 
 main {
