--- a/go_brasil_ranking/src/ui/styles/views/home_view.scss
+++ b/go_brasil_ranking/src/ui/styles/views/home_view.scss
@@ -1,36 +1,6 @@
+@use "../components/game_records_table" as grt;
+
 home-view {
-  .ranking-table {
-    margin-bottom: 35px;
-
-    width: max-content;
-  }
-
-  @mixin cardDecoration {
-    background: whitesmoke;
-
-    border: 3px solid #eee;
-    border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px;
-    transition: all 0.15s ease-in-out;
-
-    &:hover {
-      box-shadow: rgba(0, 0, 0, 0.22) 0px 19px 43px;
-      transform: translate3d(0px, -0.5px, 0px);
-    }
-  }
-
-  @mixin cardMarginPadding {
-    margin-bottom: 10px;
-
-    padding: 12px 0px;
-    padding-left: 10px;
-  }
-
-  @mixin playerLink {
-    route-link {
-      color: darken(green, 10%);
-    }
-  }
 
   .player-card {
     > route-link {
@@ -42,30 +12,10 @@ home-view {
         )
         minmax(30px, max-content);
 
-      @include cardDecoration;
-      @include cardMarginPadding;
-      @include playerLink;
+      @include grt.cardDecoration;
+      @include grt.cardMarginPadding;
+      @include grt.playerLink;
     }
   }
 
-  .game-record-card {
-    > route-link {
-      display: grid;
-      grid-template-columns:
-        minmax(20px, max-content) minmax(200px, max-content) minmax(
-          200px,
-          max-content
-        )
-        minmax(50px, max-content);
-
-      @include cardDecoration;
-      @include cardMarginPadding;
-      @include playerLink;
-    }
-  }
-
-  h3 {
-    margin-bottom: 10px;
-    padding-left: 5px;
-  }
 }
