--- a/go_brasil_ranking/src/ui/styles/index.scss
+++ b/go_brasil_ranking/src/ui/styles/index.scss
@@ -4,5 +4,6 @@
 @use "components/game_records_table.scss";
 @use "components/players_table.scss";
 
+@use "views/about_view";
 @use "views/home_view";
 @use "views/players_view.scss";
