--- a/go_brasil_ranking/src/ui/styles/globals.scss
+++ b/go_brasil_ranking/src/ui/styles/globals.scss
@@ -32,3 +32,12 @@ a {
 route-link:hover {
   cursor: pointer;
 }
+
+main {
+  display: grid;
+
+  max-width: 600px;
+
+  margin: 0 auto;
+  padding-top: $mainPaddingTop;
+}
