slight improvement to the player view decoration

--- a/go_brasil_ranking/public/index.css
+++ b/go_brasil_ranking/public/index.css
@@ -168,6 +168,10 @@ home-view {
   margin-bottom: 50px;
 }
 
+player-view hr {
+  margin-bottom: 20px;
+}
+
 player-view {
   display: grid;
   grid-row-gap: 10px;
