--- a/go_brasil_ranking/src/ui/styles/components/game_records_table.scss
+++ b/go_brasil_ranking/src/ui/styles/components/game_records_table.scss
@@ -41,18 +41,20 @@
   width: max-content;
 }
 
-h3 {
-  margin-bottom: 10px;
-  padding-left: 5px;
+@mixin captionDecoration {
+  h2 {
+    padding-left: 13px;
+  }
 }
 
 @mixin card {
-  align-items: center;
   @include rankingTable;
   @include cardDecoration;
   @include cardPadding;
   @include cardMargin;
   @include playerLink;
+
+  align-items: center;
 }
 
 @mixin legendDecoration {
@@ -64,6 +66,8 @@ $refWidth: 40px;
 $eloWidth: 60px;
 
 game-records-table {
+  @include captionDecoration;
+
   @mixin cardLegendGrid {
     $playerNameWidth: minmax(80px, 130px);
     $eloDeltaWidth: 40px;
@@ -77,7 +81,7 @@ game-records-table {
     > route-link {
       @include card;
       @include cardLegendGrid;
-      
+
       .centered {
         text-align: center;
         margin-left: -21px;
@@ -89,7 +93,7 @@ game-records-table {
     @include cardLegendGrid;
     @include cardPadding;
     @include legendDecoration;
-    
+
     .centered {
       text-align: center;
       margin-left: -20px;
