--- a/go_brasil_ranking/src/ui/styles/components/navbar.scss
+++ b/go_brasil_ranking/src/ui/styles/components/navbar.scss
@@ -1,18 +1,20 @@
 @use "../globals" as g;
 
-nav-bar {
+header {
   background-color: green;
   font-size: 1.1rem;
 
   padding-left: g.$mainPaddingLeft;
   padding-top: 10px;
 
-  nav {
-    display: flex;
-    gap: 20px;
+  nav-bar {
+    nav {
+      display: flex;
+      gap: 20px;
 
-    route-link {
-      color: g.$lightFontColor;
+      route-link {
+        color: g.$lightFontColor;
+      }
     }
   }
 }
