--- a/go_brasil_ranking/src/ui/styles/index.scss
+++ b/go_brasil_ranking/src/ui/styles/index.scss
@@ -1,6 +1,7 @@
 @use "globals";
 
 @use "components/navbar";
+@use "components/footer";
 @use "components/game_records_table";
 @use "components/players_table";
 
