--- a/go_brasil_ranking/src/ui/styles/globals.scss
+++ b/go_brasil_ranking/src/ui/styles/globals.scss
@@ -24,6 +24,7 @@ body {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 42px 1fr auto;
+  grid-template-areas: "header" "main" "footer";
 }
 
 a {
@@ -35,6 +36,8 @@ route-link:hover {
 }
 
 main {
+  grid-area: main;
+
   display: grid;
 
   max-width: 800px;
