--- a/go_brasil_ranking/src/ui/styles/components/players_table.scss
+++ b/go_brasil_ranking/src/ui/styles/components/players_table.scss
@@ -9,7 +9,10 @@ players-table {
     $danKyuWidth: 45px;
 
     display: grid;
-    grid-template-columns: grt.$refWidth $playerNameWidth $playerCountriesWidth grt.$eloWidth $danKyuWidth;
+    grid-template-columns:
+      grt.$refWidth $playerNameWidth $playerCountriesWidth
+      grt.$eloWidth $danKyuWidth;
+    grid-template-areas: "ref player-name countries elo dan-kyu";
   }
 
   .player-card {
@@ -18,11 +21,13 @@ players-table {
       @include cardLegendGrid;
 
       .dan-kyu {
+        grid-area: dan-kyu;
         text-align: center;
         margin-left: -17px;
       }
 
       .countries {
+        grid-area: countries;
         text-align: center;
         margin-left: -29px;
       }
